--- a/src/main/resources/org/cypher6672/scenes/scene1.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene1.fxml
@@ -1,42 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-<?import org.cypher6672.ui.LimitedTextField?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import org.cypher6672.ui.*?>
 
-<Pane id="selectionButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="415.0" prefWidth="866.0" style="-fx-background-color: #d0d1e6;" stylesheets="@../css/scene1.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
+<Pane id="selectionButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #d0d1e6;" stylesheets="@../css/scene1.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
 
    <Label id="pregame" layoutX="128.0" layoutY="15.0" text="Pregame" />
    <LimitedTextField id="textField" fx:id="matchNum" layoutX="239.0" layoutY="152.0" onKeyPressed="#validateInput" prefHeight="40.0" prefWidth="118.0" />
-   <LimitedTextField id="textField" fx:id="teamNum" layoutX="239.0" layoutY="72.0" onKeyPressed="#validateInput" prefHeight="40.0" prefWidth="118.0" />
+   <LimitedTextField id="textField" fx:id="teamNum" layoutX="239.0" layoutY="73.0" onKeyPressed="#validateInput" prefHeight="40.0" prefWidth="118.0" />
 
-   <Button id="pageButton" layoutY="354.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
-   <Button id="pageButton" layoutX="691.0" layoutY="355.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
+   <Button id="pageButton" layoutY="317.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="178.0" text="Prev Page" />
+   <Button id="pageButton" layoutX="537.0" layoutY="317.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
 
-   <ImageView fx:id="startLocationPNG" fitHeight="162.0" fitWidth="339.0" layoutX="393.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
-      <Image url="@../images/2024-field.png" />
+   <ImageView fx:id="startLocationPNG" fitHeight="162.0" fitWidth="339.0" layoutX="373.0" pickOnBounds="true" preserveRatio="true">
+      <Image url="@../images/2024-field_blank.png" />
    </ImageView>
-   <Button id="pageButton" layoutX="740.0" layoutY="59.0" mnemonicParsing="false" onAction="#flipImage" prefHeight="83.0" prefWidth="94.0" text="Flip Image" textAlignment="CENTER" wrapText="true" />
+   <Button id="pageButton" layoutX="508.0" layoutY="168.0" mnemonicParsing="false" onAction="#flipStartLocationImage" prefHeight="83.0" prefWidth="94.0" text="Flip Image" textAlignment="CENTER" wrapText="true" />
    <Text id="teamNameText" fx:id="teamNameText" layoutX="14.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="348.60003662109375" />
-   <Label layoutX="50.0" layoutY="233.0" prefHeight="83.0" prefWidth="174.0" text="Driver Station" textAlignment="CENTER" wrapText="true">
-      <font>
-         <Font size="32.0" />
-      </font>
+   <Label layoutX="25.0" layoutY="209.0" prefHeight="83.0" prefWidth="163.0" text="Driver Station" textAlignment="CENTER" wrapText="true">
    </Label>
-   <Label layoutX="54.0" layoutY="74.0" text="Team Num" />
+   <Label layoutX="41.0" layoutY="74.0" text="Team Num" />
    <Label layoutX="29.0" layoutY="154.0" text="Match Num" />
-   <GridPane layoutX="245.0" layoutY="212.0" prefHeight="138.0" prefWidth="224.0">
+   <GridPane layoutX="205.0" layoutY="198.0" prefHeight="119.0" prefWidth="199.0">
      <columnConstraints>
        <ColumnConstraints hgrow="SOMETIMES" maxWidth="119.99998779296875" minWidth="10.0" prefWidth="116.80003662109375" />
        <ColumnConstraints hgrow="SOMETIMES" maxWidth="159.9999755859375" minWidth="10.0" prefWidth="114.39996337890624" />
@@ -47,17 +35,17 @@
        <RowConstraints maxHeight="91.79999389648438" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
      </rowConstraints>
       <children>
-         <RadioButton id="selectionButton" mnemonicParsing="false" prefWidth="93.0" selected="true" style="-fx-text-fill: red;" text="R1" userData="Red1">
+         <RadioButton id="selectionButton" mnemonicParsing="false" prefWidth="93.0" selected="true" style="-fx-text-fill: red;" text="R1" userData="r1">
             <toggleGroup>
                <ToggleGroup fx:id="driveStation" />
             </toggleGroup>
          </RadioButton>
-         <RadioButton id="selectionButton" mnemonicParsing="false" prefWidth="110.0" style="-fx-text-fill: red;" text="R2" toggleGroup="$driveStation" userData="Red2" GridPane.rowIndex="1" />
-         <RadioButton id="selectionButton" mnemonicParsing="false" style="-fx-text-fill: red;" text="R3" toggleGroup="$driveStation" userData="Red3" GridPane.rowIndex="2" />
-         <RadioButton id="selectionButton" mnemonicParsing="false" prefHeight="43.0" prefWidth="141.0" style="-fx-text-fill: blue;" text="B1" toggleGroup="$driveStation" userData="Blue1" GridPane.columnIndex="1" />
-         <RadioButton id="selectionButton" mnemonicParsing="false" prefWidth="147.0" style="-fx-text-fill: blue;" text="B2" toggleGroup="$driveStation" userData="Blue2" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-         <RadioButton id="selectionButton" mnemonicParsing="false" style="-fx-text-fill: blue;" text="B3" toggleGroup="$driveStation" userData="Blue3" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" prefWidth="110.0" style="-fx-text-fill: red;" text="R2" toggleGroup="$driveStation" userData="r2" GridPane.rowIndex="1" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" style="-fx-text-fill: red;" text="R3" toggleGroup="$driveStation" userData="r3" GridPane.rowIndex="2" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" prefHeight="43.0" prefWidth="141.0" style="-fx-text-fill: blue;" text="B1" toggleGroup="$driveStation" userData="b1" GridPane.columnIndex="1" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" prefWidth="147.0" style="-fx-text-fill: blue;" text="B2" toggleGroup="$driveStation" userData="b2" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" style="-fx-text-fill: blue;" text="B3" toggleGroup="$driveStation" userData="b3" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       </children>
    </GridPane>
-   <CheckBox fx:id="preload" layoutX="512.0" layoutY="195.0" mnemonicParsing="false" text="Preload" />
+   <CheckBox fx:id="preload" layoutX="438.0" layoutY="267.0" mnemonicParsing="false" text="Preloaded?" />
 </Pane>
