overall layout done

--- a/src/main/resources/org/cypher6672/css/scene2.css
+++ b/src/main/resources/org/cypher6672/css/scene2.css
@@ -10,10 +10,11 @@
 .label {
     -fx-font-size: 32px;
     -fx-font-weight: bold;
+    -fx-text-fill: #000000;
 }
 
 #title {
-    -fx-font-size:40px;
+    -fx-font-size:72px;
 }
 
 #mobility {
