--- a/src/main/resources/org/cypher6672/css/scene5.css
+++ b/src/main/resources/org/cypher6672/css/scene5.css
@@ -8,6 +8,7 @@
 .label {
     -fx-font-size: 32px;
     -fx-font-weight: bold;
+    -fx-text-fill: #000000;
 }
 
 #pageButton {
@@ -28,7 +29,7 @@
 }
 
 #comments {
-    -fx-font-size: 24px;
+    -fx-font-size: 20px;
     -fx-font-weight: bold;
     -fx-text-alignment: center;
     -fx-stroke-type: outside;
@@ -44,7 +45,15 @@
     -fx-background-radius: 5px;
     -fx-padding: 5px;
     -fx-alignment: center;
-    -fx-font-family: Bahnschrift;
 }
 
+.check-box {
+    -fx-font-size: 24px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #ffffff;
+    -fx-background-color: #000000;
+    -fx-background-radius: 5px;
+    -fx-padding: 5px;
+    -fx-alignment: center;
+}
 
