--- a/src/main/resources/org/cypher6672/scenes/scene1.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene1.fxml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import org.cypher6672.ui.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Text?>
+<?import org.cypher6672.ui.LimitedTextField?>
 
-<Pane id="selectionButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #d0d1e6;" stylesheets="@../css/scene1.css" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
+<Pane id="selectionButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #d0d1e6;" stylesheets="@../css/scene1.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
 
    <Label id="pregame" layoutX="128.0" layoutY="15.0" text="Pregame" />
    <LimitedTextField id="textField" fx:id="matchNum" layoutX="239.0" layoutY="152.0" onKeyPressed="#validateInput" prefHeight="40.0" prefWidth="118.0" />
@@ -15,10 +23,10 @@
    <Button id="pageButton" layoutY="317.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="178.0" text="Prev Page" />
    <Button id="pageButton" layoutX="537.0" layoutY="317.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
 
-   <ImageView fx:id="startLocationPNG" fitHeight="162.0" fitWidth="339.0" layoutX="373.0" pickOnBounds="true" preserveRatio="true">
-      <Image url="@../images/2024-field_blank.png" />
+   <ImageView fx:id="startLocationPNG" fitHeight="229.0" fitWidth="191.0" layoutX="507.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+      <Image url="@../images/2024-field-blue.png" />
    </ImageView>
-   <Button id="pageButton" layoutX="508.0" layoutY="168.0" mnemonicParsing="false" onAction="#flipStartLocationImage" prefHeight="83.0" prefWidth="94.0" text="Flip Image" textAlignment="CENTER" wrapText="true" />
+   <Button id="pageButton" layoutX="395.0" layoutY="56.0" mnemonicParsing="false" onAction="#flipStartLocationImage" prefHeight="83.0" prefWidth="94.0" text="Flip Image" textAlignment="CENTER" wrapText="true" />
    <Text id="teamNameText" fx:id="teamNameText" layoutX="14.0" layoutY="134.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="348.60003662109375" />
    <Label layoutX="25.0" layoutY="209.0" prefHeight="83.0" prefWidth="163.0" text="Driver Station" textAlignment="CENTER" wrapText="true">
    </Label>
@@ -47,5 +55,27 @@
          <RadioButton id="selectionButton" mnemonicParsing="false" style="-fx-text-fill: blue;" text="B3" toggleGroup="$driveStation" userData="b3" GridPane.columnIndex="1" GridPane.rowIndex="2" />
       </children>
    </GridPane>
-   <CheckBox fx:id="preload" layoutX="438.0" layoutY="267.0" mnemonicParsing="false" text="Preloaded?" />
+   <CheckBox fx:id="preload" layoutX="239.0" layoutY="330.0" mnemonicParsing="false" text="Preloaded?" />
+   <GridPane layoutX="420.0" layoutY="164.0" prefHeight="159.0" prefWidth="85.0">
+      <columnConstraints>
+         <ColumnConstraints hgrow="SOMETIMES" maxWidth="86.20001220703125" minWidth="10.0" prefWidth="79.80001831054688" />
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+      <children>
+         <RadioButton id="selectionButton" mnemonicParsing="false" selected="true" text="1" userData="1">
+            <toggleGroup>
+               <ToggleGroup fx:id="startLocation" />
+            </toggleGroup>
+         </RadioButton>
+         <RadioButton id="selectionButton" mnemonicParsing="false" text="2" toggleGroup="$startLocation" userData="2" GridPane.rowIndex="1" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" text="3" toggleGroup="$startLocation" userData="3" GridPane.rowIndex="2" />
+         <RadioButton id="selectionButton" mnemonicParsing="false" text="4" toggleGroup="$startLocation" userData="4" GridPane.rowIndex="3" />
+      </children>
+   </GridPane>
+   <Label layoutX="515.0" layoutY="239.0" prefHeight="83.0" prefWidth="174.0" text="Start Location" textAlignment="CENTER" wrapText="true" />
 </Pane>
