--- a/src/main/resources/org/cypher6672/css/scene5.css
+++ b/src/main/resources/org/cypher6672/css/scene5.css
@@ -57,3 +57,13 @@
     -fx-alignment: center;
 }
 
+.combo-box {
+    -fx-font-size: 32px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #000000;
+    -fx-background-color: #000000;
+    -fx-background-radius: 5px;
+    -fx-padding: 5px;
+    -fx-alignment: center;
+}
+
