--- a/src/main/resources/org/cypher6672/css/scene1.css
+++ b/src/main/resources/org/cypher6672/css/scene1.css
@@ -49,4 +49,14 @@
     -fx-font-family: Bahnschrift;
 }
 
+.check-box {
+    -fx-font-size: 24px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #ffffff;
+    -fx-background-color: #000000;
+    -fx-background-radius: 5px;
+    -fx-padding: 5px;
+    -fx-alignment: center;
+}
+
 
