--- a/src/main/resources/org/cypher6672/css/scene5.css
+++ b/src/main/resources/org/cypher6672/css/scene5.css
@@ -45,6 +45,7 @@
     -fx-background-radius: 5px;
     -fx-padding: 5px;
     -fx-alignment: center;
+    -fx-font-family: Bahnschrift;
 }
 
 .check-box {
