--- a/src/main/resources/org/cypher6672/scenes/scene2.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene2.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 <?import org.cypher6672.ui.Tally?>
 
 <Pane style="-fx-background-color: #a6bddb;" stylesheets="@../css/scene2.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
@@ -24,10 +23,21 @@
    <Label id="title" layoutX="200.0" layoutY="14.0" text="Auton" />
 
 
-   <ImageView fx:id="autoPickupPNG" fitHeight="420.0" fitWidth="472.0" layoutX="383.0" layoutY="93.0" pickOnBounds="true">
-      <Image url="@../images/autoPickupBlue.png" />
+   <ImageView fx:id="autoPickupPNG" fitHeight="420.0" fitWidth="472.0" layoutX="386.0" layoutY="90.0" pickOnBounds="true">
+      <Image url="@../images/autoPickupRed.png" />
    </ImageView>
-   <GridPane fx:id="autoPickupGrid" layoutX="526.0" layoutY="120.0" prefHeight="360.0" prefWidth="330.0">
+   <Label id="pickupText" layoutX="537.0" layoutY="54.0" prefHeight="19.0" prefWidth="249.0" text="Note Pickups" textAlignment="CENTER" wrapText="true" />
+   <Button id="pageButton" layoutX="526.0" layoutY="480.0" mnemonicParsing="false" onAction="#flipAutonPickupImage" prefHeight="86.0" prefWidth="140.0" text="Flip Image" textAlignment="CENTER" wrapText="true">
+      <font>
+         <Font size="20.0" />
+      </font></Button>
+   <Label layoutX="39.0" layoutY="285.0" prefHeight="78.0" prefWidth="119.0" text="Spk Close" textAlignment="CENTER" wrapText="true" />
+   <Label layoutX="52.0" layoutY="415.0" prefHeight="78.0" prefWidth="72.0" text="Spk Mid" textAlignment="CENTER" wrapText="true" />
+   <Label layoutX="63.0" layoutY="181.0" text="Amp" />
+   <Tally fx:id="autoAmp" layoutX="183.0" layoutY="143.0" />
+   <Tally fx:id="autoSpeakerClose" layoutX="183.0" layoutY="268.0" />
+   <Tally fx:id="autoSpeakerMid" layoutX="183.0" layoutY="398.0" />
+   <GridPane fx:id="autoPickupGridRed" layoutX="408.0" layoutY="120.0" prefHeight="360.0" prefWidth="330.0">
       <columnConstraints>
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -39,25 +49,38 @@
          <RowConstraints maxHeight="72.0" minHeight="0.0" prefHeight="72.0" vgrow="SOMETIMES" />
          <RowConstraints maxHeight="72.0" minHeight="0.0" prefHeight="72.0" vgrow="SOMETIMES" />
       </rowConstraints>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" GridPane.columnIndex="1" />
-      <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="1" GridPane.halignment="LEFT" />
-      <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
-      <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="1" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
-      <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="1" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
-      <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="1" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
-      <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="1" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
-      <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="1" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
-      <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="1" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+      <children>
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="4" GridPane.halignment="LEFT" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="5" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="6" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="1" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="2" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" rotate="180.0" style="-fx-background-color: white; -fx-border-color: black;" userData="3" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="7" GridPane.halignment="LEFT" GridPane.rowIndex="3" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="8" GridPane.halignment="LEFT" GridPane.rowIndex="4" />
+      </children>
    </GridPane>
-   <Label id="pickupText" layoutX="537.0" layoutY="54.0" prefHeight="19.0" prefWidth="249.0" text="Note Pickups" textAlignment="CENTER" wrapText="true" />
-   <Button id="pageButton" layoutX="397.0" layoutY="411.0" mnemonicParsing="false" onAction="#flipAutonPickupImage" prefHeight="86.0" prefWidth="140.0" text="Flip Image" textAlignment="CENTER" wrapText="true">
-      <font>
-         <Font size="20.0" />
-      </font></Button>
-   <Label layoutX="39.0" layoutY="285.0" prefHeight="78.0" prefWidth="119.0" text="Spk Close" textAlignment="CENTER" wrapText="true" />
-   <Label layoutX="52.0" layoutY="415.0" prefHeight="78.0" prefWidth="72.0" text="Spk Mid" textAlignment="CENTER" wrapText="true" />
-   <Label layoutX="63.0" layoutY="181.0" text="Amp" />
-   <Tally fx:id="autoAmp" layoutX="183.0" layoutY="143.0" />
-   <Tally fx:id="autoSpeakerClose" layoutX="183.0" layoutY="268.0" />
-   <Tally fx:id="autoSpeakerMid" layoutX="183.0" layoutY="398.0" />
+   <GridPane fx:id="autoPickupGridBlue" layoutX="532.0" layoutY="118.0" prefHeight="360.0" prefWidth="330.0" visible="false">
+      <columnConstraints>
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      </columnConstraints>
+      <rowConstraints>
+         <RowConstraints maxHeight="74.4000244140625" minHeight="0.0" prefHeight="74.4000244140625" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="72.0" minHeight="0.0" prefHeight="69.5999755859375" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="72.0" minHeight="0.0" prefHeight="72.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="72.0" minHeight="0.0" prefHeight="72.0" vgrow="SOMETIMES" />
+         <RowConstraints maxHeight="72.0" minHeight="0.0" prefHeight="72.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+      <children>
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="1" GridPane.halignment="LEFT" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="2" GridPane.halignment="LEFT" GridPane.rowIndex="1" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="3" GridPane.halignment="LEFT" GridPane.rowIndex="2" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="4" GridPane.columnIndex="1" GridPane.halignment="RIGHT" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="5" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" rotate="180.0" style="-fx-background-color: white; -fx-border-color: black;" userData="6" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="7" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="3" />
+         <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="8" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
+      </children>
+   </GridPane>
 </Pane>
