--- a/src/main/resources/org/cypher6672/scenes/scene3.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene3.fxml
@@ -8,10 +8,10 @@
 <?import org.cypher6672.ui.PlusMinusBox?>
 <?import org.cypher6672.ui.Tally?>
 
-<Pane style="-fx-background-color: #74a9cf;" stylesheets="@../css/scene3.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
+<Pane prefHeight="572.0" prefWidth="858.0" style="-fx-background-color: #74a9cf;" stylesheets="@../css/scene3.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
 
-    <Button id="pageButton" layoutY="477.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
-    <Button id="pageButton" layoutX="785.0" layoutY="477.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
+    <Button id="pageButton" layoutX="-1.0" layoutY="511.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
+    <Button id="pageButton" layoutX="683.0" layoutY="513.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
 
     <Label id="teleop" layoutX="303.0" layoutY="8.0" text="Teleop" />
 
@@ -28,17 +28,17 @@
     </Label>
    <PlusMinusBox fx:id="friendlyPickups" layoutX="284.0" layoutY="131.0" />
    <PlusMinusBox fx:id="neutralPickups" layoutX="284.0" layoutY="209.0" />
-   <PlusMinusBox fx:id="sourcePickups" layoutX="675.0" layoutY="131.0" />
-   <PlusMinusBox fx:id="oppPickups" layoutX="675.0" layoutY="209.0" />
+   <PlusMinusBox fx:id="sourcePickups" layoutX="684.0" layoutY="131.0" />
+   <PlusMinusBox fx:id="oppPickups" layoutX="684.0" layoutY="209.0" />
    <Line endX="819.6000366210938" layoutX="122.0" layoutY="282.0" startX="-100.0" />
-   <Label layoutX="27.0" layoutY="337.0" text="Amp" />
-   <Label layoutX="280.0" layoutY="299.0" prefHeight="96.0" prefWidth="118.0" text="Spk Close" textAlignment="CENTER" wrapText="true" />
-   <Label layoutX="199.0" layoutY="434.0" prefHeight="79.0" prefWidth="72.0" text="Spk Mid" textAlignment="CENTER" wrapText="true" />
-   <Label layoutX="465.0" layoutY="434.0" prefHeight="79.0" prefWidth="72.0" text="Spk Far" textAlignment="CENTER" wrapText="true" />
-   <Label layoutX="611.0" layoutY="329.0" text="Trap" />
-   <Tally fx:id="teleopAmp" layoutX="107.0" layoutY="291.0" />
-   <Tally fx:id="teleopSpeakerClose" layoutX="410.0" layoutY="291.0" />
-   <Tally fx:id="teleopSpeakerMid" layoutX="284.0" layoutY="417.0" />
-   <Tally fx:id="teleopTrap" layoutX="721.0" layoutY="291.0" />
-   <Tally fx:id="teleopSpeakerFar" layoutX="548.0" layoutY="417.0" />
+   <Label layoutX="18.0" layoutY="337.0" text="Amp" />
+   <Label layoutX="272.0" layoutY="299.0" prefHeight="96.0" prefWidth="118.0" text="Spk Close" textAlignment="CENTER" wrapText="true" />
+   <Label layoutX="159.0" layoutY="429.0" prefHeight="79.0" prefWidth="72.0" text="Spk Mid" textAlignment="CENTER" wrapText="true" />
+   <Label layoutX="429.0" layoutY="429.0" prefHeight="79.0" prefWidth="72.0" text="Spk Far" textAlignment="CENTER" wrapText="true" />
+   <Label layoutX="574.0" layoutY="337.0" text="Trap" />
+   <Tally fx:id="teleopAmp" layoutX="98.0" layoutY="291.0" />
+   <Tally fx:id="teleopSpeakerClose" layoutX="402.0" layoutY="291.0" />
+   <Tally fx:id="teleopSpeakerMid" layoutX="244.0" layoutY="412.0" />
+   <Tally fx:id="teleopTrap" layoutX="684.0" layoutY="291.0" />
+   <Tally fx:id="teleopSpeakerFar" layoutX="512.0" layoutY="412.0" />
 </Pane>
