--- a/src/main/resources/org/cypher6672/scenes/scene5.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene5.fxml
@@ -10,26 +10,26 @@
 <?import org.controlsfx.control.Rating?>
 <?import org.cypher6672.ui.LimitedTextField?>
 
-<Pane minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #0570b0;" stylesheets="@../css/scene5.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
+<Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="858.0" style="-fx-background-color: #0570b0;" stylesheets="@../css/scene5.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
 
-    <Text id="quantitative" layoutX="241.0" layoutY="80.0" text="Qualitative" />
+    <Text id="quantitative" layoutX="181.0" layoutY="74.0" text="Qualitative" />
 
-    <Button id="pageButton" layoutY="424.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
-    <Button id="pageButton" layoutX="757.0" layoutY="424.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
+    <Button id="pageButton" layoutY="512.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
+    <Button id="pageButton" layoutX="683.0" layoutY="512.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
 
-    <TextArea id="comments" fx:id="comments" onKeyPressed="#validateInput" layoutX="489.0" layoutY="105.0" prefHeight="261.0" prefWidth="425.0" promptText="Comments (fouls, strategy, anything else notable)" />
-    <LimitedTextField id="scoutNameTextField" fx:id="scoutName" layoutX="476.0" layoutY="380.0" onKeyPressed="#validateInput" prefHeight="45.0" prefWidth="253.0" />
-    <Label layoutX="195.0" layoutY="385.0" text="Scouter Name" />
-   <Label id="driverSkill" layoutX="49.0" layoutY="149.0" text="Shooter" />
-   <Rating fx:id="shooter" layoutX="292.0" layoutY="151.0" rating="3.0" />
-   <Label id="driverSkill" layoutX="71.0" layoutY="193.0" text="Intake" />
-   <Rating fx:id="intake" layoutX="292.0" layoutY="195.0" rating="3.0" />
-   <Label id="driverSkill" layoutX="67.0" layoutY="235.0" prefHeight="82.0" prefWidth="128.0" text="Driver Speed" textAlignment="CENTER" wrapText="true" />
-   <Rating fx:id="speed" layoutX="292.0" layoutY="260.0" rating="3.0" />
-   <Label id="driverSkill" layoutX="26.0" layoutY="330.0" text="Driver Skill" />
-   <Rating fx:id="driver" layoutX="292.0" layoutY="332.0" rating="3.0" />
+    <TextArea id="comments" fx:id="comments" layoutX="478.0" layoutY="88.0" onKeyPressed="#validateInput" prefHeight="347.0" prefWidth="363.0" promptText="Comments (fouls, strategy, anything else notable)" />
+    <LimitedTextField id="scoutNameTextField" fx:id="scoutName" layoutX="388.0" layoutY="453.0" onKeyPressed="#validateInput" prefHeight="45.0" prefWidth="253.0" />
+    <Label layoutX="112.0" layoutY="457.0" text="Scouter Name" />
+   <Label id="driverSkill" layoutX="46.0" layoutY="163.0" text="Shooter" />
+   <Rating fx:id="shooter" layoutX="272.0" layoutY="165.0" rating="3.0" />
+   <Label id="driverSkill" layoutX="71.0" layoutY="240.0" text="Intake" />
+   <Rating fx:id="intake" layoutX="272.0" layoutY="241.0" rating="3.0" />
+   <Label id="driverSkill" layoutX="74.0" layoutY="317.0" prefHeight="45.0" prefWidth="114.0" text="Speed" textAlignment="CENTER" wrapText="true" />
+   <Rating fx:id="speed" layoutX="272.0" layoutY="317.0" rating="3.0" />
+   <Label id="driverSkill" layoutX="21.0" layoutY="394.0" text="Driver Skill" />
+   <Rating fx:id="driver" layoutX="272.0" layoutY="396.0" rating="3.0" />
    <CheckBox fx:id="shuttle" layoutX="18.0" layoutY="96.0" mnemonicParsing="false" text="Shuttlebot?" />
-   <Line endX="331.3999938964844" layoutX="137.0" layoutY="192.0" startX="-100.0" />
-   <Line endX="331.3999938964844" layoutX="137.0" layoutY="229.0" startX="-100.0" />
-   <Line endX="331.3999938964844" layoutX="137.0" layoutY="324.0" startX="-100.0" />
+   <Line endX="331.3999938964844" layoutX="123.0" layoutY="221.0" startX="-100.0" />
+   <Line endX="331.3999938964844" layoutX="123.0" layoutY="298.0" startX="-100.0" />
+   <Line endX="331.3999938964844" layoutX="123.0" layoutY="383.0" startX="-100.0" />
 </Pane>
