--- a/src/main/resources/org/cypher6672/scenes/scene5.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene5.fxml
@@ -10,12 +10,12 @@
 <?import org.controlsfx.control.Rating?>
 <?import org.cypher6672.ui.LimitedTextField?>
 
-<Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="858.0" style="-fx-background-color: #0570b0;" stylesheets="@../css/scene5.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
+<Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="858.0" style="-fx-background-color: #0570b0;" stylesheets="@../css/scene5.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController" onKeyTyped="#runUserKeybinds">
 
     <Text id="quantitative" layoutX="181.0" layoutY="74.0" text="Qualitative" />
 
-    <Button id="pageButton" layoutY="512.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
-    <Button id="pageButton" layoutX="683.0" layoutY="512.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
+    <Button id="pageButton" layoutY="513.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
+    <Button id="pageButton" layoutX="683.0" layoutY="513.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
 
     <TextArea id="comments" fx:id="comments" layoutX="478.0" layoutY="88.0" onKeyPressed="#validateInput" prefHeight="347.0" prefWidth="363.0" promptText="Comments (fouls, strategy, anything else notable)" />
     <LimitedTextField id="scoutNameTextField" fx:id="scoutName" layoutX="388.0" layoutY="453.0" onKeyPressed="#validateInput" prefHeight="45.0" prefWidth="253.0" />
