--- a/src/main/resources/org/cypher6672/scenes/scene0.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene0.fxml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="160.0" prefWidth="240.0" stylesheets="@../css/scene0.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController" onKeyPressed="#runUserKeybinds">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#runUserKeybinds" prefHeight="160.0" prefWidth="240.0" stylesheets="@../css/scene0.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
    <Text id="title" layoutX="51.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Cypher" />
    <Button id="beginButton" layoutX="58.0" layoutY="54.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="52.0" prefWidth="125.0" text="Begin" />
    <Text layoutX="32.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Made by Rishabh Rengarajan, FRC6672 2024" textAlignment="CENTER" wrappingWidth="177.0" />
+   <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="5.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+      <viewport>
+         <Rectangle2D />
+      </viewport>
+      <image>
+         <Image url="@../images/FusionCorpsLogo.png" />
+      </image>
+   </ImageView>
 </Pane>
