--- a/src/main/resources/org/cypher6672/scenes/scene2.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene2.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -83,4 +84,12 @@
          <Button mnemonicParsing="false" onAction="#manipAutonPickupGrid" prefHeight="53.0" prefWidth="100.0" style="-fx-background-color: white; -fx-border-color: black;" userData="8" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="4" />
       </children>
    </GridPane>
+   <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="23.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+      <viewport>
+         <Rectangle2D />
+      </viewport>
+      <image>
+         <Image url="@../images/FusionCorpsLogo.png" />
+      </image>
+   </ImageView>
 </Pane>
