--- a/src/main/resources/org/cypher6672/scenes/scene3.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene3.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import org.cypher6672.ui.PlusMinusBox?>
 <?import org.cypher6672.ui.Tally?>
 
-<Pane prefHeight="572.0" prefWidth="858.0" style="-fx-background-color: #74a9cf;" stylesheets="@../css/scene3.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController" onKeyPressed="#runUserKeybinds">
+<Pane onKeyPressed="#runUserKeybinds" prefHeight="572.0" prefWidth="858.0" style="-fx-background-color: #74a9cf;" stylesheets="@../css/scene3.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
 
     <Button id="pageButton" layoutY="513.0" mnemonicParsing="false" onAction="#prevPage" prefHeight="60.0" prefWidth="175.0" text="Prev Page" />
     <Button id="pageButton" layoutX="683.0" layoutY="513.0" mnemonicParsing="false" onAction="#nextPage" prefHeight="60.0" prefWidth="175.0" text="Next Page" />
@@ -41,4 +44,12 @@
    <Tally fx:id="teleopSpeakerMid" layoutX="244.0" layoutY="412.0" />
    <Tally fx:id="teleopTrap" layoutX="684.0" layoutY="291.0" />
    <Tally fx:id="teleopSpeakerFar" layoutX="512.0" layoutY="412.0" />
+   <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="23.0" layoutY="19.0" pickOnBounds="true" preserveRatio="true">
+      <viewport>
+         <Rectangle2D />
+      </viewport>
+      <image>
+         <Image url="@../images/FusionCorpsLogo.png" />
+      </image>
+   </ImageView>
 </Pane>
