--- a/src/main/resources/org/cypher6672/scenes/scene6.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene6.fxml
@@ -2,11 +2,12 @@
 
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane minHeight="-Infinity" minWidth="-Infinity" prefHeight="572.0" prefWidth="858.0" style="-fx-background-color: #034e7b;" stylesheets="@../css/scene6.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController" onKeyPressed="#runUserKeybinds">
+<Pane minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#runUserKeybinds" prefHeight="572.0" prefWidth="858.0" style="-fx-background-color: #034e7b;" stylesheets="@../css/scene6.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
 
     <Button id="sendInfoButton" layoutX="264.0" layoutY="22.0" onAction="#sendInfo" prefHeight="75.0" prefWidth="366.0" text="Generate QR" />
 
@@ -23,7 +24,15 @@
 
     <Button id="clipboardButton" layoutX="641.0" layoutY="271.0" onAction="#copyToClipboard" prefHeight="132.0" prefWidth="189.0" text="Copy Data (QR Code)" />
 
-    <Text id="reminderBox" fx:id="reminderBox" layoutX="6.0" layoutY="51.0" text="You Scouted Team XXXX" wrappingWidth="248.79998779296875" />
+    <Text id="reminderBox" fx:id="reminderBox" layoutX="6.0" layoutY="51.0" text="You - Team XXXX" wrappingWidth="248.79998779296875" />
 
     <Text id="outputString" fx:id="dataStr" layoutX="6.0" layoutY="568.0" wrappingWidth="846.1369209289551" />
+   <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="117.0" pickOnBounds="true" preserveRatio="true">
+      <viewport>
+         <Rectangle2D />
+      </viewport>
+      <image>
+         <Image url="@../images/FusionCorpsLogo.png" />
+      </image>
+   </ImageView>
 </Pane>
