--- a/src/main/resources/org/cypher6672/scenes/scene6.fxml
+++ b/src/main/resources/org/cypher6672/scenes/scene6.fxml
@@ -9,25 +9,21 @@
 
 <Pane minHeight="-Infinity" minWidth="-Infinity" onKeyPressed="#runUserKeybinds" prefHeight="572.0" prefWidth="858.0" style="-fx-background-color: #034e7b;" stylesheets="@../css/scene6.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.cypher6672.FXMLController">
 
-    <Button id="sendInfoButton" layoutX="264.0" layoutY="22.0" onAction="#sendInfo" prefHeight="75.0" prefWidth="366.0" text="Generate QR" />
+    <Button id="resetButton" layoutX="654.0" layoutY="429.0" onAction="#confirmReset" prefHeight="143.0" prefWidth="204.0" text="Start Over" />
 
-    <Button id="resetButton" layoutX="633.0" layoutY="415.0" onAction="#confirmReset" prefHeight="143.0" prefWidth="204.0" text="Start Over" />
+    <Button id="prevPageButton" layoutY="513.0" onAction="#prevPage" prefHeight="60.0" prefWidth="178.0" text="Prev Page" />
 
-    <Button id="prevPageButton" layoutX="638.0" layoutY="9.0" onAction="#prevPage" prefHeight="100.0" prefWidth="215.0" text="Prev Page" />
-
-    <ImageView fx:id="imageBox" fitHeight="429.0" fitWidth="425.0" layoutX="88.0" layoutY="125.0" pickOnBounds="true" preserveRatio="true">
+    <ImageView fx:id="imageBox" fitHeight="485.0" fitWidth="485.0" layoutX="53.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
       <viewport>
          <Rectangle2D height="320.0" width="320.0" />
       </viewport></ImageView>
 
-    <Button id="clipboardButton" layoutX="641.0" layoutY="129.0" onAction="#copyToClipboard" prefHeight="132.0" prefWidth="189.0" text="Copy Data (Text)" />
+    <Button id="clipboardButton" layoutX="669.0" layoutY="139.0" onAction="#copyToClipboard" prefHeight="132.0" prefWidth="189.0" text="Copy Data (Text)" />
 
-    <Button id="clipboardButton" layoutX="641.0" layoutY="271.0" onAction="#copyToClipboard" prefHeight="132.0" prefWidth="189.0" text="Copy Data (QR Code)" />
+    <Button id="clipboardButton" layoutX="669.0" layoutY="288.0" onAction="#copyToClipboard" prefHeight="132.0" prefWidth="189.0" text="Copy Data (QR Code)" />
 
-    <Text id="reminderBox" fx:id="reminderBox" layoutX="6.0" layoutY="51.0" text="You - Team XXXX" wrappingWidth="248.79998779296875" />
-
-    <Text id="outputString" fx:id="dataStr" layoutX="6.0" layoutY="568.0" wrappingWidth="846.1369209289551" />
-   <ImageView fitHeight="44.0" fitWidth="44.0" layoutX="14.0" layoutY="117.0" pickOnBounds="true" preserveRatio="true">
+    <Text id="reminderBox" fx:id="reminderBox" layoutX="607.0" layoutY="47.0" text="You - XXXX" wrappingWidth="236.40002441406256" />
+   <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="178.0" layoutY="519.0" pickOnBounds="true" preserveRatio="true">
       <viewport>
          <Rectangle2D />
       </viewport>
